[gd_scene load_steps=18 format=3 uid="uid://b1tod34kr8cro"]

[ext_resource type="Script" path="res://scenes/ui/map_picker/picker.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://thnrfs1tirjj" path="res://assets/gui/menu/backgrounds/main_panel.png" id="2_aj7tb"]
[ext_resource type="FontFile" uid="uid://dkpcsi5rudp7j" path="res://assets/fonts/ttf/courier.ttf" id="2_sca5i"]
[ext_resource type="PackedScene" uid="uid://ltnnrfgqasgi" path="res://scenes/ui/map_picker/map_button.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://b68vtard4p6s3" path="res://scenes/ui/minimap/minimap.tscn" id="4"]
[ext_resource type="Texture2D" uid="uid://4ccwqkvp01tf" path="res://assets/gui/menu/backgrounds/sub_panel.png" id="4_5f6g3"]
[ext_resource type="Texture2D" uid="uid://cat1jloyg2wym" path="res://assets/gui/menu/buttons/buttonMed_brown.png" id="4_s2yji"]
[ext_resource type="Texture2D" uid="uid://bbdwp6f0d3nib" path="res://assets/gui/menu/buttons/buttonMed_brown_pressed.png" id="5_1cpaa"]
[ext_resource type="Texture2D" uid="uid://dk8ep1qsmga0q" path="res://assets/gui/menu/buttons/buttonMed_brown_hover.png" id="6_pcuoj"]
[ext_resource type="FontFile" uid="uid://btstgc45ggura" path="res://assets/fonts/courier.tres" id="7_jj8gf"]
[ext_resource type="Texture2D" uid="uid://bey3i1nl046fc" path="res://assets/gui/menu/buttons/buttonLong_brown.png" id="8_lmm6n"]
[ext_resource type="Texture2D" uid="uid://2tgpj2lpm5ae" path="res://assets/gui/menu/buttons/buttonLong_brown_pressed.png" id="9_l6f2n"]
[ext_resource type="Texture2D" uid="uid://43s7leku2m4k" path="res://assets/gui/menu/buttons/buttonLong_brown_hover.png" id="10_w1krm"]

[sub_resource type="Animation" id="3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="1"]
resource_name = "hide"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1e-05)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="2"]
resource_name = "show"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wxkik"]
_data = {
"RESET": SubResource("3"),
"hide": SubResource("1"),
"show": SubResource("2")
}

[node name="picker" type="Node2D"]
visible = false
script = ExtResource("1")

[node name="background" type="NinePatchRect" parent="."]
offset_left = -600.0
offset_top = -350.0
offset_right = 600.0
offset_bottom = 350.0
texture = ExtResource("2_aj7tb")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="widgets" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -600.0
offset_top = -350.0
offset_right = 600.0
offset_bottom = 350.0

[node name="name" type="Control" parent="widgets"]
anchors_preset = 0
offset_left = 25.0
offset_top = 605.0
offset_right = 425.0
offset_bottom = 705.0

[node name="map_name" type="LineEdit" parent="widgets/name"]
layout_mode = 0
offset_right = 400.0
offset_bottom = 30.0
theme_override_fonts/font = ExtResource("2_sca5i")
alignment = 1
max_length = 30

[node name="save_button" type="TextureButton" parent="widgets/name"]
layout_mode = 0
offset_top = 40.0
offset_right = 190.0
offset_bottom = 80.0
texture_normal = ExtResource("4_s2yji")
texture_pressed = ExtResource("5_1cpaa")
texture_hover = ExtResource("6_pcuoj")
texture_focused = ExtResource("6_pcuoj")

[node name="label" type="Label" parent="widgets/name/save_button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("7_jj8gf")
text = "TR_SAVE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="load_button" type="TextureButton" parent="widgets/name"]
layout_mode = 0
offset_left = 210.0
offset_top = 40.0
offset_right = 400.0
offset_bottom = 80.0
focus_neighbor_right = NodePath("../../cancel_button")
texture_normal = ExtResource("4_s2yji")
texture_pressed = ExtResource("5_1cpaa")
texture_hover = ExtResource("6_pcuoj")
texture_focused = ExtResource("6_pcuoj")

[node name="label" type="Label" parent="widgets/name/load_button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("7_jj8gf")
text = "TR_LOAD"
horizontal_alignment = 1
vertical_alignment = 1

[node name="code" type="Control" parent="widgets"]
visible = false
anchors_preset = 0
offset_left = 25.0
offset_top = 605.0
offset_right = 425.0
offset_bottom = 705.0

[node name="code" type="LineEdit" parent="widgets/code"]
layout_mode = 0
offset_right = 300.0
offset_bottom = 30.0
theme_override_fonts/font = ExtResource("2_sca5i")
alignment = 1
max_length = 24

[node name="download_button" type="TextureButton" parent="widgets/code"]
layout_mode = 0
offset_top = 40.0
offset_right = 300.0
offset_bottom = 70.0
texture_normal = ExtResource("8_lmm6n")
texture_pressed = ExtResource("9_l6f2n")
texture_hover = ExtResource("10_w1krm")
texture_focused = ExtResource("10_w1krm")

[node name="label" type="Label" parent="widgets/code/download_button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("7_jj8gf")
text = "TR_DOWNLOAD"
horizontal_alignment = 1
vertical_alignment = 1

[node name="cancel_button" type="TextureButton" parent="widgets"]
layout_mode = 0
offset_left = 975.0
offset_top = 640.0
offset_right = 1165.0
offset_bottom = 680.0
focus_neighbor_left = NodePath("../name/load_button")
texture_normal = ExtResource("4_s2yji")
texture_pressed = ExtResource("5_1cpaa")
texture_hover = ExtResource("6_pcuoj")
texture_focused = ExtResource("6_pcuoj")

[node name="label" type="Label" parent="widgets/cancel_button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("7_jj8gf")
text = "TR_CANCEL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="tabs" type="Control" parent="widgets"]
anchors_preset = 0
offset_left = 25.0
offset_top = 10.0
offset_right = 1175.0
offset_bottom = 50.0

[node name="stock_button" type="TextureButton" parent="widgets/tabs"]
layout_mode = 0
offset_right = 300.0
offset_bottom = 40.0
texture_normal = ExtResource("8_lmm6n")
texture_pressed = ExtResource("9_l6f2n")
texture_hover = ExtResource("10_w1krm")
texture_focused = ExtResource("10_w1krm")

[node name="label" type="Label" parent="widgets/tabs/stock_button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("7_jj8gf")
text = "TR_STOCK"
horizontal_alignment = 1
vertical_alignment = 1

[node name="custom_button" type="TextureButton" parent="widgets/tabs"]
layout_mode = 0
offset_left = 425.0
offset_right = 725.0
offset_bottom = 40.0
texture_normal = ExtResource("8_lmm6n")
texture_pressed = ExtResource("9_l6f2n")
texture_hover = ExtResource("10_w1krm")
texture_focused = ExtResource("10_w1krm")

[node name="label" type="Label" parent="widgets/tabs/custom_button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("7_jj8gf")
text = "TR_CUSTOM"
horizontal_alignment = 1
vertical_alignment = 1

[node name="downloaded_button" type="TextureButton" parent="widgets/tabs"]
layout_mode = 0
offset_left = 850.0
offset_right = 1150.0
offset_bottom = 40.0
texture_normal = ExtResource("8_lmm6n")
texture_pressed = ExtResource("9_l6f2n")
texture_hover = ExtResource("10_w1krm")
texture_focused = ExtResource("10_w1krm")

[node name="label" type="Label" parent="widgets/tabs/downloaded_button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("7_jj8gf")
text = "TR_DOWNLOADED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="online" type="Control" parent="widgets"]
visible = false
anchors_preset = 0
offset_left = 25.0
offset_top = 10.0
offset_right = 1175.0
offset_bottom = 50.0

[node name="latest_button" type="TextureButton" parent="widgets/online"]
layout_mode = 0
offset_left = 125.0
offset_right = 425.0
offset_bottom = 40.0
texture_normal = ExtResource("8_lmm6n")
texture_pressed = ExtResource("9_l6f2n")
texture_hover = ExtResource("10_w1krm")
texture_focused = ExtResource("10_w1krm")

[node name="label" type="Label" parent="widgets/online/latest_button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("7_jj8gf")
text = "TR_LATEST"
horizontal_alignment = 1
vertical_alignment = 1

[node name="top_button" type="TextureButton" parent="widgets/online"]
layout_mode = 0
offset_left = 725.0
offset_right = 1025.0
offset_bottom = 40.0
texture_normal = ExtResource("8_lmm6n")
texture_pressed = ExtResource("9_l6f2n")
texture_hover = ExtResource("10_w1krm")
texture_focused = ExtResource("10_w1krm")

[node name="label" type="Label" parent="widgets/online/top_button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("7_jj8gf")
text = "TR_TOP_DOWNLOADED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="map_list" type="Control" parent="widgets"]
anchors_preset = 0
offset_left = 25.0
offset_top = 50.0
offset_right = 675.0
offset_bottom = 550.0

[node name="map_list_background" type="NinePatchRect" parent="widgets/map_list"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("4_5f6g3")
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="map0" parent="widgets/map_list" instance=ExtResource("3")]
layout_mode = 0

[node name="map1" parent="widgets/map_list" instance=ExtResource("3")]
layout_mode = 0
offset_top = 50.0
offset_bottom = 100.0

[node name="map2" parent="widgets/map_list" instance=ExtResource("3")]
layout_mode = 0
offset_top = 100.0
offset_bottom = 150.0

[node name="map3" parent="widgets/map_list" instance=ExtResource("3")]
layout_mode = 0
offset_top = 150.0
offset_bottom = 200.0

[node name="map4" parent="widgets/map_list" instance=ExtResource("3")]
layout_mode = 0
offset_top = 200.0
offset_bottom = 250.0

[node name="map5" parent="widgets/map_list" instance=ExtResource("3")]
layout_mode = 0
offset_top = 250.0
offset_bottom = 300.0

[node name="map6" parent="widgets/map_list" instance=ExtResource("3")]
layout_mode = 0
offset_top = 300.0
offset_bottom = 350.0

[node name="map7" parent="widgets/map_list" instance=ExtResource("3")]
layout_mode = 0
offset_top = 350.0
offset_bottom = 400.0

[node name="map8" parent="widgets/map_list" instance=ExtResource("3")]
layout_mode = 0
offset_top = 400.0
offset_bottom = 450.0

[node name="map9" parent="widgets/map_list" instance=ExtResource("3")]
layout_mode = 0
offset_top = 450.0
offset_bottom = 500.0

[node name="list_prev" type="TextureButton" parent="widgets"]
layout_mode = 0
offset_left = 25.0
offset_top = 555.0
offset_right = 215.0
offset_bottom = 595.0
focus_neighbor_right = NodePath("../list_next")
texture_normal = ExtResource("4_s2yji")
texture_pressed = ExtResource("5_1cpaa")
texture_hover = ExtResource("6_pcuoj")
texture_focused = ExtResource("6_pcuoj")

[node name="label" type="Label" parent="widgets/list_prev"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("7_jj8gf")
text = "TR_PREV"
horizontal_alignment = 1
vertical_alignment = 1

[node name="list_next" type="TextureButton" parent="widgets"]
layout_mode = 0
offset_left = 485.0
offset_top = 555.0
offset_right = 675.0
offset_bottom = 595.0
focus_neighbor_left = NodePath("../list_prev")
texture_normal = ExtResource("4_s2yji")
texture_pressed = ExtResource("5_1cpaa")
texture_hover = ExtResource("6_pcuoj")
texture_focused = ExtResource("6_pcuoj")

[node name="label" type="Label" parent="widgets/list_next"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("7_jj8gf")
text = "TR_NEXT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="minimap" parent="widgets" instance=ExtResource("4")]
offset_left = 925.0
offset_top = 300.0
offset_right = 965.0
offset_bottom = 340.0

[node name="thumb" type="TextureRect" parent="widgets/minimap"]
visible = false
layout_mode = 0
offset_left = -240.0
offset_top = -240.0
offset_right = 240.0
offset_bottom = 240.0
expand_mode = 1

[node name="label" type="Label" parent="widgets/minimap/thumb"]
layout_mode = 0
offset_right = 480.0
offset_bottom = 480.0
theme_override_fonts/font = ExtResource("2_sca5i")
text = "TR_FETCHING"
horizontal_alignment = 1
vertical_alignment = 1

[node name="animations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wxkik")
}
speed_scale = 4.0

[connection signal="text_changed" from="widgets/name/map_name" to="." method="_on_map_name_text_changed"]
[connection signal="pressed" from="widgets/code/download_button" to="." method="_on_download_button_pressed"]
[connection signal="pressed" from="widgets/tabs/stock_button" to="." method="_on_stock_button_pressed"]
[connection signal="pressed" from="widgets/tabs/custom_button" to="." method="_on_custom_button_pressed"]
[connection signal="pressed" from="widgets/tabs/downloaded_button" to="." method="_on_downloaded_button_pressed"]
[connection signal="pressed" from="widgets/online/latest_button" to="." method="_on_latest_button_pressed"]
[connection signal="pressed" from="widgets/online/top_button" to="." method="_on_top_button_pressed"]
